# raylib-base-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/__PACKAGE_PATH__/: NativeLoader.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-v31/: themes.xml
assets/scripts/scenes/: main.lua  splash.lua
docs/: SCRIPTING.md  TARGETS.md
include/: game_config.h  global_system.h  scene.h  script_host.h
include/services/: clock.h
include/states/: global_state.h
mobile/: README-ios.md
mobile/ios/: Info.plist.sample
src/: global_system.c  main.c  scene.c  script_host.c
